--- a/MvcNetCoreAWSPostrgresEC2/appsettings.json
+++ b/MvcNetCoreAWSPostrgresEC2/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;port=5432;Username=postgres;Password=postgres;Database=hospital"
+    "Postgres": "",
+    "Mariadb": ""
   }
 }
